# Liquifly

./: .editorconfig  .gitignore  CONCEPT.md  Makefile  README.md
core/: Cargo.toml  build.rs  clippy.toml  rustfmt.toml
core/src/bridge/: dart_ffi.rs  mod.rs
docs/: architecture.md
