[package]
name = "liquifly"
version = "0.0.1"
description = "A real-time fluid simulation engine written in Rust."
repository = "https://github.com/PlugFox/Liquifly"
homepage = "https://plugfox.dev"
authors = ["Mike Matiunin <plugfox@gmail.com>"]
license = "MIT"
edition = "2024"

# Lint settings for the entire project
[lints.rust]
dead_code = "allow"
unused_variables = "allow"
# unsafe_code = "deny"  # Uncomment when ready for strict safety
# missing_docs = "warn" # Uncomment when ready for documentation

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some noisy lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# cargo build (dev profile with some optimizations for faster runtime during development)
[profile.dev]
opt-level = 1      # Basic optimizations for reasonable performance
debug = true       # Keep debug info
incremental = true # Fast recompilation

# cargo build --release
# Default binary target - balanced optimization
# ~ 6.8 MB
[profile.release]
opt-level = 3      # Maximum optimization
lto = "thin"       # Thin LTO - good balance between speed and compile time
codegen-units = 16 # Parallel codegen for faster builds
panic = "abort"    # Smaller binary, no unwinding
strip = true       # Remove debug symbols
debug = false      # No debug info

# cargo build --profile release-small
# For smallest binary size (slightly slower runtime, slower compilation)
# ~ 4.1 MB
[profile.release-small]
inherits = "release"
opt-level = "z"      # Optimize for size
lto = "fat"          # Full LTO for maximum size reduction
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"
strip = true

# cargo build --profile release-fast
# For fastest runtime (larger binary, much slower compilation)
# Production-ready with maximum performance
[profile.release-fast]
inherits = "release"
opt-level = 3        # Maximum optimization level
lto = "fat"          # Full LTO for maximum performance
codegen-units = 1    # Single unit for best optimization
panic = "abort"
strip = true
# Additional performance flags
overflow-checks = false  # Disable overflow checks in hot paths
debug-assertions = false

[dependencies]

# Parallelism for physics calculations
rayon = "1.10"

# FFI with Dart
allo-isolate = "0.1"

# Atomic operations and lock-free structures
crossbeam = "0.8"

# Optional: async runtime (if needed for future features)
# tokio = { version = "1.48.0", features = [
#     "rt-multi-thread",
#     "macros",
#     "sync",
#     "time",
# ] }

# Optional: Logging (uncomment when needed)
# tracing = "0.1.41"
# tracing-subscriber = { version = "0.3.20", features = [
#     "env-filter",
#     "fmt",
# ] }

# Optional: Time handling (uncomment when needed)
# chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
tempfile = "3.23.0"
